Implementation of the Komis_motoryzacjajny.h and .cpp file, NieznanyPojazdException.h and .cpp file and the ui window

--- a/Komis_motoryzacyjny/Komis_motoryzacyjny.vcxproj
+++ b/Komis_motoryzacyjny/Komis_motoryzacyjny.vcxproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <ClCompile Include="Komis.cpp" />
     <ClCompile Include="Motocykl.cpp" />
+    <ClCompile Include="NieznanyPojazdException.cpp" />
     <ClCompile Include="Pojazd.cpp" />
     <ClCompile Include="SamochodDostawczy.cpp" />
     <ClCompile Include="SamochodOsobowy.cpp" />
@@ -106,6 +107,7 @@
   <ItemGroup>
     <ClInclude Include="Komis.h" />
     <ClInclude Include="Motocykl.h" />
+    <ClInclude Include="NieznanyPojazdException.h" />
     <ClInclude Include="Pojazd.h" />
     <ClInclude Include="SamochodDostawczy.h" />
     <ClInclude Include="SamochodOsobowy.h" />
