--- a/Komis_motoryzacyjny/Komis_motoryzacyjny.vcxproj.filters
+++ b/Komis_motoryzacyjny/Komis_motoryzacyjny.vcxproj.filters
@@ -55,6 +55,9 @@
     <ClCompile Include="Komis.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NieznanyPojazdException.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Pojazd.h">
@@ -70,6 +73,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Komis.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NieznanyPojazdException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
