--- a/Komis_motoryzacyjny/Komis_motoryzacyjny.vcxproj
+++ b/Komis_motoryzacyjny/Komis_motoryzacyjny.vcxproj
@@ -92,6 +92,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DodajPojazdDialog.cpp" />
     <ClCompile Include="Komis.cpp" />
     <ClCompile Include="Motocykl.cpp" />
     <ClCompile Include="NieznanyPojazdException.cpp" />
@@ -99,12 +100,14 @@
     <ClCompile Include="SamochodDostawczy.cpp" />
     <ClCompile Include="SamochodOsobowy.cpp" />
     <QtRcc Include="Komis_motoryzacyjny.qrc" />
+    <QtUic Include="DodajPojazdDialog.ui" />
     <QtUic Include="Komis_motoryzacyjny.ui" />
     <QtMoc Include="Komis_motoryzacyjny.h" />
     <ClCompile Include="Komis_motoryzacyjny.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <QtMoc Include="DodajPojazdDialog.h" />
     <ClInclude Include="Komis.h" />
     <ClInclude Include="Motocykl.h" />
     <ClInclude Include="NieznanyPojazdException.h" />
