--- a/Komis_motoryzacyjny/Komis_motoryzacyjny.vcxproj.filters
+++ b/Komis_motoryzacyjny/Komis_motoryzacyjny.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="NieznanyPojazdException.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DodajPojazdDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Pojazd.h">
@@ -78,5 +81,15 @@
     <ClInclude Include="NieznanyPojazdException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="DodajPojazdDialog.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+  </ItemGroup>
+  <ItemGroup>
+    <QtUic Include="DodajPojazdDialog.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
   </ItemGroup>
 </Project>
