--- a/Komis_motoryzacyjny/Komis_motoryzacyjny.vcxproj.filters
+++ b/Komis_motoryzacyjny/Komis_motoryzacyjny.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClCompile Include="DodajPojazdDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EdytujPojazdDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Pojazd.h">
@@ -86,9 +89,15 @@
     <QtMoc Include="DodajPojazdDialog.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="EdytujPojazdDialog.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="DodajPojazdDialog.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="EdytujPojazdDialog.ui">
       <Filter>Form Files</Filter>
     </QtUic>
   </ItemGroup>
